--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,176 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
+
     <TextView
+        android:id="@+id/text1"
+        android:layout_width="70sp"
+        android:layout_height="35sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="226dp"
+        android:text="귀가천사1"
+        android:textColor="#03A9F4"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/friend_name_1"
+        android:layout_width="70sp"
+        android:layout_height="40sp"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="216dp"
+        android:layout_marginEnd="23dp"
+        android:layout_toRightOf="@id/text1"
+        android:ems="4"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toStartOf="@+id/friend_phone_1"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/text1"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/friend_phone_1"
+        android:layout_width="166sp"
+        android:layout_height="40sp"
+        android:layout_marginTop="216dp"
+        android:layout_marginEnd="16dp"
+        android:layout_toRightOf="@id/friend_name_1"
+        android:ems="10"
+        android:hint="휴대폰 번호"
+        android:inputType="phone"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/text2"
+        android:layout_width="70sp"
+        android:layout_height="35sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="298dp"
+        android:text="귀가천사2"
+        android:textColor="#03A9F4"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/friend_name_2"
+        android:layout_width="70sp"
+        android:layout_height="40sp"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="288dp"
+        android:layout_marginEnd="23dp"
+        android:layout_toRightOf="@id/text2"
+        android:ems="4"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toStartOf="@+id/friend_phone_2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/text2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <EditText
+        android:id="@+id/friend_phone_2"
+        android:layout_width="166sp"
+        android:layout_height="40sp"
+        android:layout_marginTop="288dp"
+        android:layout_marginEnd="16dp"
+        android:layout_toRightOf="@id/friend_name_2"
+        android:ems="10"
+        android:hint="휴대폰 번호"
+        android:inputType="phone"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text3"
+        android:layout_width="70sp"
+        android:layout_height="35sp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="378dp"
+        android:text="귀가천사3"
+        android:textColor="#03A9F4"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/friend_name_3"
+        android:layout_width="70sp"
+        android:layout_height="40sp"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="368dp"
+        android:layout_marginEnd="23dp"
+        android:layout_toRightOf="@id/text3"
+        android:ems="4"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toStartOf="@+id/friend_phone_3"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/text3"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/friend_phone_3"
+        android:layout_width="166sp"
+        android:layout_height="40sp"
+        android:layout_marginTop="368dp"
+        android:layout_marginEnd="16dp"
+        android:layout_toRightOf="@id/friend_name_3"
+        android:ems="10"
+        android:hint="휴대폰 번호"
+        android:inputType="phone"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_register_friend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="162dp"
+        android:layout_marginEnd="162dp"
+        android:layout_marginBottom="30dp"
+        android:text="등록하기"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="178dp"
+        android:src="@drawable/abc_vector_test"
+        app:layout_constraintBottom_toTopOf="@+id/text1"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="150sp"
+        android:layout_height="150sp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="131dp"
+        android:src="@mipmap/ic_launcher"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
