--- a/app/src/main/res/layout/activity_map_search_detail.xml
+++ b/app/src/main/res/layout/activity_map_search_detail.xml
@@ -32,7 +32,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/binggraemelona"
             android:gravity="start"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:text="차트"
             />
 
@@ -49,7 +49,7 @@
             android:fontFamily="@font/binggraemelona"
             android:gravity="start"
             android:text="정보"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             />
 
         <LinearLayout
@@ -81,7 +81,7 @@
                 android:paddingBottom="3dp"
                 android:text="0.0"
                 android:textSize="30dp"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 />
 
 
@@ -96,7 +96,7 @@
                 >
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="대형마트: "
@@ -104,7 +104,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:id="@+id/mapsearchdetail_tv_itemcount1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -113,7 +113,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="  편의점: "
@@ -130,7 +130,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="  학교: "
@@ -138,7 +138,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:id="@+id/mapsearchdetail_tv_itemcount3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -157,7 +157,7 @@
                 >
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:id="@+id/item4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -166,7 +166,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:id="@+id/mapsearchdetail_tv_itemcount4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -175,7 +175,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="  지하철: "
@@ -183,7 +183,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:id="@+id/mapsearchdetail_tv_itemcount5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -192,7 +192,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="  은행: "
@@ -200,7 +200,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:id="@+id/mapsearchdetail_tv_itemcount6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -217,7 +217,7 @@
                 >
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="병원: "
@@ -225,7 +225,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:id="@+id/mapsearchdetail_tv_itemcount7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -234,7 +234,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="  약국: "
@@ -242,7 +242,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:id="@+id/mapsearchdetail_tv_itemcount8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -251,7 +251,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="  카페: "
@@ -259,7 +259,7 @@
                     />
 
                 <TextView
-                    android:textColor="@android:color/white"
+                    android:textColor="@android:color/black"
                     android:id="@+id/mapsearchdetail_tv_itemcount9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
