--- a/app/src/main/res/layout/activity_addfriend.xml
+++ b/app/src/main/res/layout/activity_addfriend.xml
@@ -1,140 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".AddFriendActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_margin="30sp"
+            android:layout_width="300sp"
+            android:layout_height="120sp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_alogo" />
 
 
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="귀가천사1"
+            android:textColor="#03A9F4"
+            android:textSize="15sp" />
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+        <EditText
+            android:id="@+id/friend_name_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_et"
+            android:fontFamily="@font/binggraemelona"
+            android:hint="지인 이름"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+            android:paddingRight="10dp"
+            android:theme="@style/et_thema" />
 
-    <ImageButton
-        android:id="@+id/btn_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/abc_vector_test" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="150sp"
-        android:layout_height="150sp"
-        android:layout_gravity="center"
-        android:src="@mipmap/ic_launcher" />
+        <EditText
+            android:id="@+id/friend_phone_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_et"
+            android:fontFamily="@font/binggraemelona"
+            android:hint="휴대폰 번호"
+            android:inputType="phone"
+            android:padding="10dp"
+            android:theme="@style/et_thema" />
 
 
-    <TextView
-        android:id="@+id/text1"
+        <TextView
+            android:id="@+id/text2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:padding="10dp"
+            android:text="귀가천사2"
+            android:textColor="#03A9F4"
+            android:textSize="15sp" />
+
+
+        <EditText
+            android:id="@+id/friend_name_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_et"
+            android:fontFamily="@font/binggraemelona"
+            android:hint="지인 이름"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+            android:theme="@style/et_thema" />
+
+        <EditText
+            android:id="@+id/friend_phone_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_et"
+            android:fontFamily="@font/binggraemelona"
+            android:hint="휴대폰 번호"
+            android:inputType="phone"
+            android:padding="10dp"
+            android:theme="@style/et_thema" />
+
+        <TextView
+            android:id="@+id/text3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:padding="10dp"
+            android:text="귀가천사3"
+            android:textColor="#03A9F4"
+            android:textSize="15sp" />
+
+        <EditText
+            android:id="@+id/friend_name_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_et"
+            android:fontFamily="@font/binggraemelona"
+            android:hint="지인 이름"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+            android:theme="@style/et_thema" />
+
+        <EditText
+            android:id="@+id/friend_phone_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_et"
+            android:fontFamily="@font/binggraemelona"
+            android:hint="휴대폰 번호"
+            android:inputType="phone"
+            android:padding="10dp"
+            android:theme="@style/et_thema" />
+
+        <Button
+            android:id="@+id/btn_register_friend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="등록하기" />
+
+
+    </LinearLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/main_bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:padding="10dp"
-        android:text="귀가천사1"
-        android:textColor="#03A9F4"
-        android:textSize="15sp" />
+        android:layout_gravity="bottom"
+        android:background="@color/colorWhiteBlue"
+        app:itemIconTint="@color/colorWhite"
+        app:itemTextColor="@color/colorWhite"
+        app:layout_behavior="tech.thdev.app.view.BottomNavigationBehavior"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_fl_container"
+        app:menu="@menu/bottom_menu" />
 
-    <EditText
-        android:id="@+id/friend_name_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:background="@drawable/round_et"
-        android:hint="지인 이름"
-        android:inputType="textPersonName"
-        android:paddingRight="10dp"
-        android:fontFamily="@font/binggraemelona"
-        android:theme="@style/et_thema" />
-
-    <EditText
-        android:id="@+id/friend_phone_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:background="@drawable/round_et"
-        android:hint="휴대폰 번호"
-        android:inputType="phone"
-        android:fontFamily="@font/binggraemelona"
-        android:theme="@style/et_thema" />
-
-
-    <TextView
-        android:id="@+id/text2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:padding="10dp"
-        android:text="귀가천사2"
-        android:textColor="#03A9F4"
-        android:textSize="15sp" />
-
-
-    <EditText
-        android:id="@+id/friend_name_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:background="@drawable/round_et"
-        android:hint="지인 이름"
-        android:inputType="textPersonName"
-        android:fontFamily="@font/binggraemelona"
-        android:theme="@style/et_thema" />
-
-    <EditText
-        android:id="@+id/friend_phone_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:background="@drawable/round_et"
-        android:hint="휴대폰 번호"
-        android:inputType="phone"
-        android:fontFamily="@font/binggraemelona"
-        android:theme="@style/et_thema" />
-
-    <TextView
-        android:id="@+id/text3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:padding="10dp"
-        android:text="귀가천사3"
-        android:textColor="#03A9F4"
-        android:textSize="15sp" />
-
-    <EditText
-        android:id="@+id/friend_name_3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:background="@drawable/round_et"
-        android:hint="지인 이름"
-        android:inputType="textPersonName"
-        android:fontFamily="@font/binggraemelona"
-        android:theme="@style/et_thema" />
-
-    <EditText
-        android:id="@+id/friend_phone_3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:background="@drawable/round_et"
-        android:hint="휴대폰 번호"
-        android:inputType="phone"
-        android:fontFamily="@font/binggraemelona"
-        android:theme="@style/et_thema" />
-
-    <Button
-        android:id="@+id/btn_register_friend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:text="등록하기" />
-
-
-</LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
