Proxy Driver Layout 추가 수정 - 하단 네비게이션바 및 intent 이동 구현 #29

--- a/app/src/main/res/layout/activity_addfriend.xml
+++ b/app/src/main/res/layout/activity_addfriend.xml
@@ -125,6 +125,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
+            android:background="@drawable/btn_proxy"
+            android:fontFamily="@font/binggraemelona"
             android:text="등록하기" />
 
 
