--- a/app/src/main/res/layout/activity_proxydriver.xml
+++ b/app/src/main/res/layout/activity_proxydriver.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MapActivity">
 
     <LinearLayout
@@ -11,128 +12,140 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/btn_back"
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/abc_vector_test" />
+            android:layout_marginBottom="15dp"
+            android:layout_marginRight="15sp"
+            android:layout_gravity="center"
+            android:text="대리운전"
+            android:textStyle="bold"
+            android:fontFamily="@font/binggraemelona"
+            android:textSize="50dp" />
 
-        <ImageButton
-            android:id="@+id/btn_kakao"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/abc_vector_test" />
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <TextView
+            <!--
+            <ImageButton
+                android:id="@+id/btn_kakao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:text="대리운전"
-                android:textStyle="bold"
-                android:fontFamily="@font/binggraemelona"
-                android:textSize="50dp" />
+                android:src="@drawable/abc_vector_test" />
+            -->
+
+        <Button
+            android:id="@+id/btn_kakao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="카카오T"
+            android:fontFamily="@font/binggraemelona"
+            android:background="@drawable/btn_proxy"/>
+
+        <Button
+            android:id="@+id/btn_proxy1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="서울"
+            android:fontFamily="@font/binggraemelona"
+            android:background="@drawable/btn_proxy"/>
+
+        <Button
+            android:id="@+id/btn_proxy2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btn_proxy"
+            android:fontFamily="@font/binggraemelona"
+            android:text="인천" />
+
+        <Button
+            android:id="@+id/btn_proxy3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btn_proxy"
+            android:text="경기" />
+
+        <Button
+            android:id="@+id/btn_proxy4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btn_proxy"
+            android:fontFamily="@font/binggraemelona"
+            android:text="대전" />
+
+        <Button
+            android:id="@+id/btn_proxy5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btn_proxy"
+            android:fontFamily="@font/binggraemelona"
+            android:text="대구" />
+
+        <Button
+            android:id="@+id/btn_proxy6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btn_proxy"
+            android:fontFamily="@font/binggraemelona"
+            android:text="부산"/>
+
+        <Button
+            android:id="@+id/btn_proxy7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btn_proxy"
+            android:fontFamily="@font/binggraemelona"
+            android:text="광주"/>
 
 
-            <Button
-                android:id="@+id/btn_proxy1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="서울"
-                android:fontFamily="@font/binggraemelona"
-                android:background="@drawable/btn_proxy"/>
+        <Button
+            android:id="@+id/btn_proxy8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btn_proxy"
+            android:fontFamily="@font/binggraemelona"
+            android:text="울산" />
 
-            <Button
-                android:id="@+id/btn_proxy2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/btn_proxy"
-                android:fontFamily="@font/binggraemelona"
-                android:text="인천" />
+        <Button
+            android:id="@+id/btn_proxy9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btn_proxy"
+            android:fontFamily="@font/binggraemelona"
+            android:text="세종"/>
 
-            <Button
-                android:id="@+id/btn_proxy3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/btn_proxy"
-                android:text="경기" />
-
-            <Button
-                android:id="@+id/btn_proxy4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/btn_proxy"
-                android:fontFamily="@font/binggraemelona"
-                android:text="대전" />
-
-            <Button
-                android:id="@+id/btn_proxy5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/btn_proxy"
-                android:fontFamily="@font/binggraemelona"
-                android:text="대구" />
-
-            <Button
-                android:id="@+id/btn_proxy6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/btn_proxy"
-                android:fontFamily="@font/binggraemelona"
-                android:text="부산"/>
-
-            <Button
-                android:id="@+id/btn_proxy7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/btn_proxy"
-                android:fontFamily="@font/binggraemelona"
-                android:text="광주"/>
-
-
-            <Button
-                android:id="@+id/btn_proxy8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/btn_proxy"
-                android:fontFamily="@font/binggraemelona"
-                android:text="울산" />
-
-            <Button
-                android:id="@+id/btn_proxy9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/btn_proxy"
-                android:fontFamily="@font/binggraemelona"
-                android:text="세종"/>
-
-            <Button
-                android:id="@+id/btn_proxy10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/btn_proxy"
-                android:fontFamily="@font/binggraemelona"
-                android:text="제주" />
-
-        </LinearLayout>
+        <Button
+            android:id="@+id/btn_proxy10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btn_proxy"
+            android:fontFamily="@font/binggraemelona"
+            android:text="제주" />
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/main_bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:background="@color/colorWhiteBlue"
+                app:itemIconTint="@color/colorWhite"
+                app:itemTextColor="@color/colorWhite"
+                app:layout_behavior="tech.thdev.app.view.BottomNavigationBehavior"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/main_fl_container"
+                app:menu="@menu/bottom_menu"
+                android:layout_marginTop="10dp"/>
+
+</FrameLayout>
